<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_content_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/card_filter_dialog_title"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/chkBoxRarityCommon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/rarity_common" />

    <CheckBox
        android:id="@+id/chkBoxRarityRare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/rarity_rare" />

    <CheckBox
        android:id="@+id/chkBoxRarityEpic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/rarity_epic" />

    <CheckBox
        android:id="@+id/chkBoxRarityLegendary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rarity_legendary" />

</LinearLayout>